@@ -18,7 +18,7 @@ export type InstanceV11 = {
   }
   version: string
   configuration?: Mastodon.Instance['configuration']
-  filters: Mastodon.Filter[]
+  filters: Mastodon.Filter<any>[]
   notifications_filter: {
     follow: boolean
     follow_request: boolean
