@@ -3,8 +3,8 @@ import { createAsyncThunk } from '@reduxjs/toolkit'
 
 export const updateFilters = createAsyncThunk(
   'instances/updateFilters',
-  async (): Promise<Mastodon.Filter[]> => {
-    return apiInstance<Mastodon.Filter[]>({
+  async (): Promise<Mastodon.Filter<any>[]> => {
+    return apiInstance<Mastodon.Filter<any>[]>({
       method: 'get',
       url: `filters`
     }).then(res => res.body)
