@@ -1,1 +1,2 @@
 toooting愉快！此版本包括以下改进和修复：
+- 改进过滤体验，与v4.0以上版本一致
